...
            </UText>
          </UAnimatedView>

          <UKeyboardAvoidingView gap={16} mt={25}>
            <UAnimatedView animation="fadeInUp" delay={300}>
              <UInput
                testID="login-email"
                variant="primary"
                placeholder="Enter your email"
                value={email}
                onChangeText={handleEmailChange}
                error={emailError}
                keyboardType="email-address"
...
                onSubmitEditing={focusPassword}
                blurOnSubmit={false}
              />
            </UAnimatedView>
            <UAnimatedView animation="fadeInUp" delay={400}>
              <UInput
                testID="login-password"
                ref={passwordRef}
                variant="primary"
                placeholder="Enter your password"
                value={password}
                onChangeText={handlePasswordChange}
                error={passwordError}
...
