...
      <YStack flex={1} jc="center" ai="center" px={10}>
        
        {/* Transparent placeholder to maintain layout */}
        <View height={LOGO_HEIGHT} width={LOGO_WIDTH} onLayout={onPlaceholderLayout}/>

        <UAnimatedView animation="fadeInUp" delay={300}>
          <NeonButton testID="onboarding-login" onPress={handleLoginPress} width={280} title="Log In" />
        </UAnimatedView>

        <UAnimatedView animation="fadeInUp" delay={450}>
          <NeonButton onPress={handleSignupPress} mt={15} width={280} title="Sign Up" />
        </UAnimatedView>
      </YStack>
...
