...
        <UScreenError message={errorMessage} onRetry={refetch} />
      </UScreenLayout>
    );
  }

  return (
    <UScreenLayout testID="home-screen">
      <ScrollView
        showsVerticalScrollIndicator={false}
        contentContainerStyle={{
          paddingTop: top,
          paddingBottom: 64 + Math.max(bottom, 24),
        }}
...
